[gd_scene load_steps=7 format=3 uid="uid://drpyo8j7v14s4"]

[ext_resource type="PackedScene" uid="uid://dbayfhc24c857" path="res://Assets/Drones/Parts/Frames/Frame1/Frame1.glb" id="1"]
[ext_resource type="Script" path="res://drone/drone.gd" id="2"]
[ext_resource type="Script" path="res://drone/flight_controller/flight_controller.gd" id="2_3q72h"]
[ext_resource type="PackedScene" uid="uid://dmh4b4js6orhx" path="res://drone/led.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://bvqmyftvv13w6" path="res://drone/parts/propellers/propeller1.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://bgtdc8niopper" path="res://Assets/Drones/Parts/Motors/Motor1/Motor1.glb" id="7"]

[node name="Drone1" type="RigidBody3D"]
mass = 0.7
custom_integrator = true
continuous_cd = true
script = ExtResource("2")
projected_area = Vector3(0.0128, 0.0135, 0.0058)

[node name="FlightController" type="Node3D" parent="."]
script = ExtResource("2_3q72h")

[node name="LEDMode" parent="." instance=ExtResource("4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.015, 0.045)

[node name="Frame" parent="." instance=ExtResource("1")]

[node name="Motor1" parent="." instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0, -0.08)
MAX_RPM = 30000.0
RPM_ACCELERATION = 150000.0
MIN_POWER = 2
kv = 2400

[node name="Propeller1" parent="Motor1" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0095, 0)

[node name="Motor2" parent="." instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.08, 0, -0.08)
clockwise = false
MAX_RPM = 30000.0
RPM_ACCELERATION = 150000.0
MIN_POWER = 2
kv = 2400

[node name="Propeller2" parent="Motor2" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0095, 0)

[node name="Motor3" parent="." instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.08, 0, 0.08)
MAX_RPM = 30000.0
RPM_ACCELERATION = 150000.0
MIN_POWER = 2
kv = 2400

[node name="Propeller3" parent="Motor3" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0095, 0)

[node name="Motor4" parent="." instance=ExtResource("7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0, 0.08)
clockwise = false
MAX_RPM = 30000.0
RPM_ACCELERATION = 150000.0
MIN_POWER = 2
kv = 2400

[node name="Propeller4" parent="Motor4" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0095, 0)
